feat: add footer in html file

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ const biglitters = (str) => {
                 <h2 class="section-title"> English</h2> 
                 <p>I have Lived in Ireland for 8 years, where I am received a good base and practical communication skills from native speakers.</p>
     </div></main>
-    <footer><div class="container"></div></footer>
+    <footer><div class="container"></div>
+    <p>Create by <a href="https://github.com/polinavasilec">Polina Vasilets</a>. 2022</p> 
+    <p><a href="https://rs.school/js/">The Rolling Scopes</a> <img src="./assets/img/rsapp.png" alt="logo rsschool">
+    </div>
+    </footer>
 </body>
 </html>
