feat: add css styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main> <div class="container">
         <section class="section" id="profile">
          <h1 class="section-title"> Palina Vasilets </h1>
-         <img src="./assets/img/myfoto.jpg" alt="my photo">
+         <img src="./assets/img/myfoto.jpg" alt="my photo" width="150" height="150">
          <p class="section-title">Candidate for the position frontend developer</p>
         </section>
         
@@ -86,8 +86,8 @@ const biglitters = (str) => {
                 <p>I have Lived in Ireland for 8 years, where I am received a good base and practical communication skills from native speakers.</p>
     </div></main>
     <footer><div class="container"></div>
-    <p>Create by <a href="https://github.com/polinavasilec">Polina Vasilets</a>. 2022</p> 
-    <p><a href="https://rs.school/js/">The Rolling Scopes</a> <img src="./assets/img/rsapp.png" alt="logo rsschool">
+    <p>Create by <a href="https://github.com/polinavasilec" class="link-hover">Polina Vasilets</a>. 2022</p> 
+    <p><a href="https://rs.school/js/" class="link-hover">The Rolling Scopes</a> <img src="./assets/img/rsapp.png" alt="logo rsschool">
     </div>
     </footer>
 </body>
