refactor: change index for valid

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </section>
             <section class="section" id="code">
                 <h2 class="section-title"> Code example</h2> 
-                <pre> <code>  const biglitters = (str) => {
+                <pre> <code>  const biglitters = (str) =&gt; {
             let result = ''
             for (let i=0; i &lt; str.length; i+=1) {
                     const shouldBeBig = (i===0 || str [i - 1] === ' ');
